--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
@@ -15,9 +14,9 @@
                 <button type="button" id="btn_basket">add</button>
             </form>
                 <h2>Do:</h2>
-                <div class="toDo"></div>
+                <div class="toDo">
+                    
+                </div>
         </div>
-        
-    <script src="./index.js"></script>
     </body>
 </html>
